--- a/src/develnext/bundle/preg/description.html
+++ b/src/develnext/bundle/preg/description.html
@@ -1,4 +1,10 @@
 <ul>
-    <li><code>bundle\preg\Preg</code> <i>(основной функционал, адаптер под preg_* функции)</i></li>
-    <li><code>preg</code> <i>(поддержка preg_* функций)</i></li>
+    <li><code>bundle\preg\Preg</code> - <i>адаптер regex для preg_* функций</i></li>
+    <li><code>preg_grep</code> <i></li>
+    <li><code>preg_match_all</code> <i></li>
+    <li><code>preg_match</code> <i></li>
+    <li><code>preg_replace</code> <i></li>
+    <li><code>preg_replace_callback</code> <i></li>
+    <li><code>preg_split</code> <i></li>
+    <li><code>preg_quote</code> <i></li>
 </ul>
